# slidenote

./: CMakeLists.txt  README.md  SettingsDialog.cpp  SettingsDialog.h  SlideWindow.cpp  SlideWindow.h  Slidenote.icns  Slidenote.qrc  changelog.md  main.cpp
.github/workflows/: cmake-macos.yml  cmake-ubuntu.yml
resources/: Info.plist
